# truffsh

./: .gitignore  Cargo.toml  Makefile  build.ninja  config.h.in  configure.py  examples.md  neosh.md  rust-project.json  rust-project.json.in  rustfmt.toml  toolchain.json.template
.cargo/: config.toml
crates/neosh-arena/: Cargo.toml
crates/neosh-arena/src/: lib.rs  tests.rs
crates/neosh-libc/: Cargo.toml
crates/neosh-libc/src/: io.rs  lib.rs  types.rs
crates/neosh-mutex/: Cargo.toml
crates/neosh-mutex/src/: lib.rs  unix.rs
modules/: modules.mk
modules/neo-ffi/: lib.rs  unistd.rs
modules/neosh/: main.rs
neosh/: Cargo.toml
neosh/src/: main.rs  panic.rs
src/: defines.h  stream.h  vec.c  vec.h
