[workspace.package]
version = "0.1.0"
description = "A new kind of Shell"
license = "Apache-2.0"

[workspace]
members = ["crates/neosh-arena", "crates/neosh-mutex", "neosh"]
resolver = "3"

[workspace.dependencies]
mimalloc = { version = "0.1.48", features = ["v3", "override"] }
libc = { version = "0.2.182", default-features = false }

typed-builder = { version = "0.23.2" }

neosh-mutex = { path = "crates/neosh-mutex" }
